# realtest-mcp

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  README.md  RealTestMcp.sln  appsettings.json  config.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md
.claude/commands/: README.md
.claude/hooks/: README.md
.claude/memory/: MEMORY.md  README.md  project_context.md  user_profile.md
.github/workflows/: ci.yml
docs/: REALTEST_MCP_PROJECT_BRIEF.md  api-reference.md  architecture.md  realscript-language-guide.md  roadmap.md
docs/superpowers/plans/: 2026-03-21-realtest-mcp.md  2026-03-22-doc-ingestion-design.md  2026-03-23-alias-splitting.md  2026-03-25-python-mcp-rewrite.md
docs/superpowers/specs/: 2026-03-21-realtest-mcp-design.md  2026-03-22-doc-ingestion-design.md  2026-03-25-python-mcp-rewrite-design.md
scripts/: three_bar_st.rts
skills/realscript-authoring/: SKILL.md
skills/realscript-debugging/: SKILL.md
skills/strategy-design/: SKILL.md
src/RealTestMcp/: Program.cs  RealTestMcp.csproj
src/RealTestMcp/Core/: EmbeddingService.cs  VectorStoreService.cs
src/RealTestMcp/Tools/: GetFunctionReferenceTool.cs  GetLanguageGuideTool.cs  SearchDocsTool.cs  SearchExamplesTool.cs  SearchUserScriptsTool.cs
src/realtest_mcp/: __init__.py  __main__.py  config.py
tests/: conftest.py  test_category_parser.py  test_chunker.py  test_config.py  test_element_parser.py  test_integration.py  test_markdown_formatter.py  test_pdf_parser.py  test_script_parser.py  test_tools.py  test_vector_store.py
tests/RealTestMcp.Tests/: RealTestMcp.Tests.csproj  UnitTest1.cs
(+33 files in other folders)
