[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realtest-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "chromadb",
    "sentence-transformers",
    "pymupdf",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (PDF + embedding pipeline)"]

[tool.setuptools.packages.find]
where = ["src"]
